--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
-h1 {
-    border: solid 10px;
-    color: green;
-    text-align: center
+body {
+    background-color: ivory;
+    margin: 0;
 }
-p {
-    font-style: italic;
-    color: red;
+img {
+    width: 20%;
+    margin-left: 40%;
+}
+h1{
     text-align: center
+    
 }
